--- a/Backend/package.json
+++ b/Backend/package.json
@@ -12,7 +12,7 @@
     "body-parser": "^1.20.3",
     "brace-expansion": "^1.1.11",
     "braces": "^3.0.3",
-    "bson": "^6.10.3",
+    "bson": "^6.10.3",git 
     "buffer-equal-constant-time": "^1.0.1",
     "buffer-from": "^1.1.2",
     "busboy": "^1.6.0",
